--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^3.2.33",
     "vue-core-video-player": "^0.2.0",
     "vue-easeljs": "^0.1.14",
+    "vue-router": "^4.1.3",
     "vue-video": "^0.1.7"
   },
   "devDependencies": {
